style/style.css
@import url('https://fonts.googleapis.com/css?family=Raleway:100');
* {
    margin: 0;
    padding: 0;
    /**
     * Tahoma is the default font for content
     */
    font-family: 'Tahoma', 'Montserrat', sans-serif, 'Noto Sans', 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'Tahoma';
    font-weight: inherit
}

h1 {
    /**
     * Montserrat is the default font for title
     */
    font-family: 'Montserrat', sans-serif !important;
}


/**
 * Below styles could be deleted
 */

body {
  /*
    display: flex;
*/
    align-items: center;
    justify-content: center
}

h2 {
    font-family: 'Raleway', sans-serif;
}

#header {
  display:flex;
  /*
  float:left;
  */
  top:0;
  position: fixed;
  z-index:30;
  margin-left: 0px;
  margin-right: 0px;
  min-width: 1110px;
  width: 100%;
  height: 50px;
  background-color: rgba(26,26,26,1.0);
  -webkit-font-smoothing: subpixel-antialiased;;
}

#logo {
  position:relative;
  padding-top: 10px;
  padding-left: 38px;
}

#logo img{
  height:60%;
  width:auto;
}

#menu {
  height: 26px;
  float: left;
  padding-top: 12px;
  margin-left: 60px;

}

#menu ul{
  height:100%;
  list-style:none;
}

#menu ul li{
  float: left;
  height: 100%;
  margin: 0 10px;
}

#menu ul li a{
  float: left;
  height: 100%;
}

#menu .menu-image{
  float: left;
  height: 100%;
  margin: 0 10px;
}

#menu .menu-title{
  float: left;
  color: #FFF;
  line-height: 26px;
  font-size: 15px;
  font-family: 'Montserrat' sans-serif !important;
}

#submenu{
  float:left;
  height: 26px;
  padding-top: 14px;
  margin-left: 40px;
}

#submenu .submenut1{
  font-size: 12px;
  color: #FFF;
}

#submenu .submenubwn{
  color: #FFF;
  font-size: 14px;
}

#submenu .submenut2{
  font-size: 12px;
  color: #FFF;
}

#user{
  order:0;
  width: 180px;
  float: right;
  position: relative;
  min-width: 180px;
  max-width: 180px;
  height:50px;
  left:10px;


}

#user img{
  width:30px;
  top:10px;

  margin-top: 0px;

  /*float: right;
  */

  position:relative;
  margin-left:20px
}

#user .logint1{
  font-size: 12px;
  color: #FFF;

}



#searchbox{
    order:0;
    float: right;
    margin-top: 12px;
    margin-left: 55px;
    width: 11%;
    height: 26px;
    background-color: #FFF;
    border-radius: 25px;
    border: none;
}

#searchbox form{
  height: 100%;
}

#searchbox .search{
  height: 18px;
    float: left;
    /*
    margin: 3px 6px;
    */
    margin-top: 5px;
    margin-left: 4px;
}

#searchbox input{
  float: right;
  height: 100%;
  width: 61%;
  margin-right: 10px;
  text-align: right;
  border: none;
  background-color: rgba(0, 0, 0, 0);
  outline: 0 none !important;
  font-size: 11px;
  font-family: 'Montserrat', sans-serif !important;
  font-weight: bold;
}

.content{
  display:flex;
  flex-direction: column;
  width:80%;
  padding-top:50px;
  margin-left: 130px;
}

#title{
  font-size: 20px;
  font-weight:bolder;
  margin-top: 20px;

  font-family: 'Go A', 'Go B', 'Montserrat', sans-serif;
}

.page-subtitle{
  background-color:rgba(0,0,0,1.00);
  color:rgba(248,247,247,1.00);
  font-size:20px;
  line-height: 24px;
  height:40px;
  padding-left: 10px;
padding-right: 20px;

  margin-top:10px;
}

.page-subtitle span{
  margin-left:14px;
  position:relative;
  top:7px;
}

.creditContent{

/*
  float:right;
	width:80%;
	padding: 20px 0px;
  */

  width:80%;
  margin-top: 40px;
      margin-bottom: 40px;
      margin-left: 60%;
	border-bottom:2px solid #ddd;
	line-height:30px;
	font-size:18px;
	color:rgba(122,123,121,1.00);
}

.creditContent span{
  margin:20px;
}

.creditPicture{
  margin-left: 60%;
  height:100px;
  width:50%;
  /*float:right;*/
  /*float: right;
  width:80%;
  padding: 20px 0px;
  margin-left: 55%;*/
}

.creditPicture img{
  margin:10px;
}



.member span{
  font-weight:bolder;
	font-size:18px;
	color: rgba(86,83,80,1.00);
}

.teamContent{
  margin-left: 40%;
}

.teamContent .left{
  /*float:left;*/
  text-align: left;
  margin:10px;
  /*margin-left: 40%;*/
}


.teamContent .right{
  /*float:left;*/
  text-align: right;
  margin: 10px;
  font-size:18px;
  /*margin-left: 70%;*/
}

.footer {
  display: block;
  width: 100%;
  min-width: 1100px;
  height: 50px;
  margin-top: 100px;
  font-size: 11px;
  float:left;
}

.left {
  float: left;
  margin: 10px;
}

.right {
  float:right;
  text-align: right;
  margin: 10px;
}

